Fixed position of footer text and eliminated small horizontal scroll.

--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ html, body {
 /* Section Title Banner */
 .banner {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 33vh;
 }
 .banner-img {
@@ -527,5 +527,11 @@ html, body {
   font-variant: normal;
   font-weight: 50;
   color: #E2E2E2;
-  margin: 0;
+  margin: 0 15px;
+}
+.footer-wide {
+  width: 100%;
+  height: 25px;
+  margin-top: -25px;
+  background-color: black;
 }
